--- a/redis-cluster/docker-compose.yml
+++ b/redis-cluster/docker-compose.yml
@@ -37,6 +37,23 @@ services:
       redis-cluster:
         ipv4_address: 172.30.0.4
 
+  python-app:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: python-app
+    volumes:
+      - ../app:/app
+    working_dir: /app
+    command: ["tail", "-f", "/dev/null"]
+    networks:
+      redis-cluster:
+        ipv4_address: 172.30.0.5
+    depends_on:
+      - redis-node-1
+      - redis-node-2
+      - redis-node-3
+
 networks:
   redis-cluster:
     driver: bridge
