--- a/redis-cluster/docker-compose.yml
+++ b/redis-cluster/docker-compose.yml
@@ -37,6 +37,42 @@ services:
       redis-cluster:
         ipv4_address: 172.30.0.4
 
+  redis-node-4:
+    image: redis:7
+    container_name: redis-node-4
+    ports:
+      - "7004:6379"
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    networks:
+      redis-cluster:
+        ipv4_address: 172.30.0.5
+
+  redis-node-5:
+    image: redis:7
+    container_name: redis-node-5
+    ports:
+      - "7005:6379"
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    networks:
+      redis-cluster:
+        ipv4_address: 172.30.0.6
+
+  redis-node-6:
+    image: redis:7
+    container_name: redis-node-6
+    ports:
+      - "7006:6379"
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    networks:
+      redis-cluster:
+        ipv4_address: 172.30.0.7
+
   python-app:
     build:
       context: ..
@@ -48,11 +84,14 @@ services:
     command: ["tail", "-f", "/dev/null"]
     networks:
       redis-cluster:
-        ipv4_address: 172.30.0.5
+        ipv4_address: 172.30.0.8
     depends_on:
       - redis-node-1
       - redis-node-2
       - redis-node-3
+      - redis-node-4
+      - redis-node-5
+      - redis-node-6
 
 networks:
   redis-cluster:
